--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WCAG-MENU</title>
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         </ul>
     </nav>
 
-    <script src="menu.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 
