Added links to static files

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         </ul>
     </nav>
 
+    <div style="margin-top: 100px;">
+        <p>Ссылки:</p>
+        <p><a href="./css/menu.css" target="_blank">menu.css</a></p>
+        <p><a href="./js/menu.js" target="_blank">menu.js</a></p>
+    </div>
+
     <script src="./js/menu.js"></script>
 </body>
 
