Add aria-label to nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <nav>
+    <nav aria-label="Основное меню сайта">
         <ul class="menu" role="menubar" data-role="menu">
             <li>
                 <a href="#link-1" role="menuitem">Ссылка 1</a>
